--- a/app/src/main/res/layout/crea_scheda.xml
+++ b/app/src/main/res/layout/crea_scheda.xml
@@ -14,10 +14,6 @@
         android:layout_marginBottom="80dp"
 
         >
-
-
-
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -29,6 +25,7 @@
                 android:id="@+id/xChiudiScheda"
                 android:onClick="ChiudTuttoNonSalva"
                 android:layout_width="30dp"
+
                 android:layout_height="30dp"
                 android:background="@drawable/ic_baseline_home_24"
                 android:contentDescription="Cancella Tutto"
@@ -36,20 +33,19 @@
             </Button>
             <TextView
                 android:layout_width="0dp"
-                android:layout_weight="0.2"
+                android:layout_weight="0.3"
                 android:layout_height="wrap_content"
                 android:text="Nome:"
                 android:textColor="@color/black"
                 android:textSize="24dp"
-                android:gravity="right"
+                android:gravity="center"
                 ></TextView>
 
             <EditText
                 android:id="@+id/nomeScheda"
                 android:layout_width="0dp"
-                android:layout_weight="0.4"
+                android:layout_weight="0.45"
                 android:textSize="24dp"
-                android:layout_marginRight="20dp"
                 android:layout_height="wrap_content"
 
                 >
@@ -57,7 +53,7 @@
             <ImageButton
                 android:id="@+id/aggiungiImmagineScheda"
                 android:layout_width="0dp"
-                android:layout_weight="0.2"
+                android:layout_weight="0.15"
                 android:layout_height="50dp"
                 android:text="cm"
 
