--- a/app/src/main/res/layout/misure_dettaglio.xml
+++ b/app/src/main/res/layout/misure_dettaglio.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
     android:padding="20dp">
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,7 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginBottom="20dp"
+            android:padding="20dp"
             >
             <TextView
                 android:layout_width="match_parent"
@@ -90,7 +89,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginBottom="20dp"
+            android:padding="20dp"
             >
 
             <TextView
@@ -168,6 +167,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:gravity="center"
+
             >
             <TextView
                 android:layout_width="match_parent"
@@ -179,9 +179,11 @@
                 ></TextView>
         </LinearLayout>
         <LinearLayout
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:layout_marginBottom="20dp"
             >
             <TextView
                 android:layout_width="0dp"
@@ -232,6 +234,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:layout_marginBottom="20dp"
             >
             <TextView
                 android:layout_width="0dp"
@@ -281,6 +284,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:layout_marginBottom="20dp"
             >
             <TextView
                 android:layout_width="0dp"
@@ -318,6 +322,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center"
+        android:layout_alignParentBottom="true"
         >
         <Button
             android:id="@+id/SalvaMisure"
@@ -338,4 +343,4 @@
         </Button>
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
