--- a/app/src/main/res/layout/note_dettaglio.xml
+++ b/app/src/main/res/layout/note_dettaglio.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:padding="20dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:gravity="center"
         android:layout_marginBottom="20dp"
         >
         <TextView
@@ -19,7 +18,8 @@
             android:text="Note:"
             android:textColor="@color/black"
             android:textSize="18dp"
-            android:gravity="left"
+            android:gravity="center"
+            android:layout_marginRight="10dp"
             ></TextView>
         <EditText
             android:id="@+id/noteDettaglio"
@@ -35,7 +35,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center"
-
+        android:layout_alignParentBottom="true"
         >
         <Button
             android:id="@+id/SalvaNote"
@@ -56,4 +56,4 @@
         </Button>
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
