--- a/app/src/main/res/layout/crea_giorno.xml
+++ b/app/src/main/res/layout/crea_giorno.xml
@@ -21,14 +21,7 @@
         android:gravity="center"
         android:layout_marginBottom="20dp"
         >
-        <Button
-            android:onClick="ChiudTuttoNonSalva"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:background="@drawable/ic_baseline_home_24"
-            android:contentDescription="Cancella Tutto"
-            >
-        </Button>
+
         <TextView
             android:layout_width="0dp"
             android:layout_weight="0.3"
@@ -98,34 +91,40 @@
         android:layout_alignParentBottom="true"
         android:gravity="center"
         >
-
+        <Button
+            android:onClick="ChiudTuttoNonSalva"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@drawable/ic_baseline_home_24"
+            android:contentDescription="Cancella Tutto"
+            >
+        </Button>
         <Button
             android:id="@+id/CreaEsercizio"
             android:layout_width="0dp"
-            android:layout_weight="1"
+            android:layout_weight="0.6"
             android:layout_height="wrap_content"
-            android:text="Nuovo esercizio"
+            android:text="Add new Exercise"
             android:textSize="18dp"
             android:textColor="@color/black"
             android:background="@drawable/drawable_scheda"
             android:onClick="AggiungiGiorno"
             android:layout_marginRight="20dp"
+            android:layout_marginLeft="20dp"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
             >
         </Button>
         <Button
             android:id="@+id/backGiorno"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
-            android:text="Back"
             android:textSize="18dp"
             android:textColor="@color/black"
             android:layout_gravity="center"
-            android:background="@drawable/drawable_scheda"
+            android:background="@drawable/ic_baseline_keyboard_backspace_24"
 
             >
         </Button>
