--- a/app/src/main/res/layout/crea_scheda.xml
+++ b/app/src/main/res/layout/crea_scheda.xml
@@ -21,16 +21,7 @@
             android:gravity="center"
             android:layout_marginBottom="20dp"
             >
-            <Button
-                android:id="@+id/xChiudiScheda"
-                android:onClick="ChiudTuttoNonSalva"
-                android:layout_width="30dp"
 
-                android:layout_height="30dp"
-                android:background="@drawable/ic_baseline_home_24"
-                android:contentDescription="Cancella Tutto"
-                >
-            </Button>
             <TextView
                 android:layout_width="0dp"
                 android:layout_weight="0.3"
@@ -101,31 +92,39 @@
         android:gravity="center"
         >
         <Button
+            android:id="@+id/xChiudiScheda"
+            android:onClick="ChiudTuttoNonSalva"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@drawable/ic_baseline_home_24"
+            android:contentDescription="Cancella Tutto"
+            >
+        </Button>
+
+        <Button
             android:id="@+id/CreaGiorno"
             android:layout_width="0dp"
-            android:layout_weight="1"
+            android:layout_weight="0.6"
             android:layout_height="wrap_content"
-            android:text="Nuovo giorno"
+            android:text="Add new Day"
             android:onClick="AggiungiGiorno"
             android:textSize="18dp"
             android:textColor="@color/black"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="20dp"
+            android:layout_marginLeft="20dp"
             android:background="@drawable/drawable_scheda"
             >
         </Button>
         <Button
             android:id="@+id/backScheda"
-            android:layout_width="0dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:text="Back"
-            android:textSize="18dp"
             android:textColor="@color/black"
-            android:background="@drawable/drawable_scheda"
+            android:background="@drawable/ic_baseline_keyboard_backspace_24"
 
             >
         </Button>
