--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="azzurrino">#0e98ba</color>
     <color name="arancione">#FFA500</color>
     <color name="grigio">#D9DDDC</color>
+    <color name="pantone">#bdbebd</color>
     <color name="lightGreen">#90ee90</color>
     <color name="red">#ff0000</color>
 
