ja fai ste modifiche alle FUNZIONALITA dei bottoni ngul a mammita

--- a/app/src/main/res/layout/crea_giorno.xml
+++ b/app/src/main/res/layout/crea_giorno.xml
@@ -19,25 +19,24 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="10dp"
         >
 
         <TextView
             android:layout_width="0dp"
-            android:layout_weight="0.3"
+            android:layout_weight="0.2"
             android:layout_height="wrap_content"
             android:text="Nome:"
             android:textSize="24dp"
             android:textColor="@color/black"
-            android:gravity="center
-"
+            android:gravity="left"
             ></TextView>
 
         <EditText
             android:id="@+id/nomeGiorno"
             android:layout_width="0dp"
             android:textSize="24dp"
-            android:layout_weight="0.45"
+            android:layout_weight="0.5"
             android:layout_height="wrap_content"
 
             >
@@ -52,8 +51,43 @@
             >
         </Button>
 
-    </LinearLayout>
 
+    </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginBottom="10dp"
+            >
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="0.3"
+                android:layout_height="wrap_content"
+                android:text="Note:"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                android:gravity="right"
+                android:layout_marginRight="10dp"
+                ></TextView>
+            <Button
+                android:id="@+id/bottoneNote"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:textSize="18dp"
+                android:layout_weight="1"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/drawable_scheda"
+                android:text="aggiungi"></Button>
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="0.3"
+                android:layout_height="0dp"
+                android:text=""
+                ></TextView>
+
+
+        </LinearLayout>
     <ListView
         android:id="@+id/listaEserciziView"
         android:layout_width="match_parent"
